--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <section id="open-resources">
-            <h2>Open Resources</h2>
+            <h2>Open Resources (coming soon)</h2>
             <p>Project Firefly is committed to open-source principles. Our resources are freely available to the community:</p>
             <ul>
                 <li><a href="#">Technical Documentation</a></li>
@@ -106,7 +106,7 @@
             <h2>Community and Support</h2>
             <p>Join our community to stay updated and participate in discussions:</p>
             <p>
-                <a href="#" class="btn">Join WhatsApp Group</a>
+                <a href="#" class="btn">Join WhatsApp Group, drop a line here.</a>
                 <a href="#" class="btn">Check Round-table Schedule</a>
             </p>
         </section>
@@ -114,7 +114,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Project Firefly. All rights reserved.</p>
+            <p>&copy; 2025 Project Firefly. All rights reserved.</p>
         </div>
     </footer>
 </body>
