--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <main class="container">
         <section id="intro">
             <h2>Welcome to Project Firefly</h2>
-            <p>An ambitious open-source initiative dedicated to the development of a Small Molten Salt Fast Breeder Reactor (MSFBR). This project aims to revolutionize the nuclear energy sector by leveraging the principles of open-source collaboration to create a safer, more efficient, and sustainable nuclear reactor.</p>
+            <p>An ambitious open-source initiative dedicated to the development of a Small Molten Salt Fast Breeder Reactor (MSFBR). This project aims to revolutionize the nuclear energy sector by[...]</p>
         </section>
 
         <section id="breaking-tradition">
             <h2>Breaking Tradition</h2>
-            <p>The nuclear industry has historically been shrouded in secrecy and proprietary practices, often driven by the sensitive nature of nuclear technology and national security concerns. This closed-off approach has hindered collaboration, innovation, and rapid advancement in the field. However, the landscape is changing. Inspired by the success of open-source projects in other scientific domains, Project Firefly seeks to bring transparency and community-driven development to nuclear reactor technology.</p>
+            <p>The nuclear industry has historically been shrouded in secrecy and proprietary practices, often driven by the sensitive nature of nuclear technology and national security concerns. [...]</p>
         </section>
 
         <section id="goals">
@@ -50,10 +50,10 @@
             <h2>Open Resources (coming soon)</h2>
             <p>Project Firefly is committed to open-source principles. Our resources are freely available to the community:</p>
             <ul>
-                <li><a href="#">Technical Documentation</a></li>
-                <li><a href="#">Design Specifications</a></li>
-                <li><a href="#">Research Papers</a></li>
-                <li><a href="#">Simulation Tools</a></li>
+                <li><a href="mailto:hello@fireflyenergy.org">Technical Documentation</a></li>
+                <li><a href="mailto:hello@fireflyenergy.org">Design Specifications</a></li>
+                <li><a href="mailto:hello@fireflyenergy.org">Research Papers</a></li>
+                <li><a href="mailto:hello@fireflyenergy.org">Simulation Tools</a></li>
             </ul>
         </section>
 
@@ -66,16 +66,16 @@
                 <li>Energy Companies</li>
                 <li>Environmental Organizations</li>
             </ul>
-            <p><a href="#" class="btn">Contact us</a></p>
+            <p><a href="mailto:hello@fireflyenergy.org" class="btn">Contact us</a></p>
         </section>
 
         <section id="support">
             <h2>Support Project Firefly</h2>
             <p>Your support can help accelerate the development of clean, sustainable nuclear energy:</p>
             <p>
-                <a href="#" class="btn">Make a Donation</a>
-                <a href="#" class="btn">Sponsor a Project</a>
-                <a href="#" class="btn">Contribute Computing</a>
+                <a href="mailto:hello@fireflyenergy.org" class="btn">Make a Donation</a>
+                <a href="mailto:hello@fireflyenergy.org" class="btn">Sponsor a Project</a>
+                <a href="mailto:hello@fireflyenergy.org" class="btn">Contribute Computing</a>
             </p>
         </section>
 
@@ -89,7 +89,7 @@
                 <li>Community Outreach</li>
                 <li>Content Creation</li>
             </ul>
-            <p><a href="#" class="btn">Sign up as a volunteer</a></p>
+            <p><a href="mailto:hello@fireflyenergy.org" class="btn">Sign up as a volunteer</a></p>
         </section>
 
         <section id="license">
@@ -106,8 +106,8 @@
             <h2>Community and Support</h2>
             <p>Join our community to stay updated and participate in discussions:</p>
             <p>
-                <a href="#" class="btn">Join WhatsApp Group, drop a line here.</a>
-                <a href="#" class="btn">Check Round-table Schedule</a>
+                <a href="mailto:hello@fireflyenergy.org" class="btn">Join WhatsApp Group, drop a line here.</a>
+                <a href="mailto:hello@fireflyenergy.org" class="btn">Check Round-table Schedule</a>
             </p>
         </section>
     </main>
