--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <main class="container">
         <section id="intro">
             <h2>Welcome to Project Firefly</h2>
-            <p>An ambitious open-source initiative dedicated to the development of a Small Molten Salt Fast Breeder Reactor (MSFBR). This project aims to revolutionize the nuclear energy sector by[...]</p>
+            <p> An ambitious open-source initiative dedicated to the development of a Small Molten Salt Fast Breeder Reactor (MSFBR). This project aims to revolutionize the nuclear energy sector by leveraging open-source collaboration to create a safer, more efficient, and sustainable nuclear reactor. By combining cutting-edge molten salt technology with fast breeder capabilities, we're working to provide clean, abundant energy that can meet the world's growing power needs while minimizing environmental impact and maximizing fuel efficiency through breeding cycles.</p>
         </section>
 
         <section id="breaking-tradition">
             <h2>Breaking Tradition</h2>
-            <p>The nuclear industry has historically been shrouded in secrecy and proprietary practices, often driven by the sensitive nature of nuclear technology and national security concerns. [...]</p>
+            <p> The nuclear industry has historically been shrouded in secrecy and proprietary practices, often driven by the sensitive nature of nuclear technology and national security concerns. Project Firefly challenges this paradigm by embracing transparency and open collaboration. We believe that by making our research, designs, and findings openly accessible, we can accelerate innovation, improve safety through collective scrutiny, and democratize access to clean nuclear energy technology. Our open-source approach invites global expertise to contribute, review, and improve our work, fostering a new era of collaborative nuclear development.
+            </p>
         </section>
 
         <section id="goals">
